tests/ui/invalid_unification2.stderr
error[E0597]: `tag` does not live long enough
  --> tests/ui/invalid_unification2.rs:9:5
   |
9  |     make_interner!(interner2: str);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ borrowed value does not live long enough
...
15 | }
   | -
   | |
   | `tag` dropped here while still borrowed
   | borrow might be used here, when `_guard` is dropped and runs the `Drop` code for type `main::make_guard`
   |
   = note: values in a scope are dropped in the opposite order they are defined
   = note: this error originates in the macro `$crate::internal::generativity::make_guard` which comes from the expansion of the macro `make_interner` (in Nightly builds, run with -Z macro-backtrace for more info)
